Fix header on mobile

--- a/css/component.css
+++ b/css/component.css
@@ -313,8 +313,8 @@
 		display: inline-flex;
 		font-size 40%;
 	}
-	
+
 	#ha-header {
-		height:200px;
+		height:200px !important;
 	}
 }
